# calculus-1

./: .gitignore  .noteworthy-layout  CONTRIBUTING.md  README.md  noteworthy.py  noteworthy_cli.py  pyproject.toml
config/: constants.json  hierarchy.json  metadata.json  preface.typ  snippets.typ
config/modules/core/: block.json
content/0/: 0.typ
content/1/: 0.typ  1.typ  2.typ  3.typ  4.typ  5.typ  6.typ  7.typ  8.typ
content/2/: 1.typ  2.typ  3.typ  4.typ  5.typ  6.typ  7.typ  9.typ
noteworthy/: __main__.py  assets.py  config.py  utils.py
noteworthy/core/: build.py  build_manager.py  deps.py  fs_sync.py  modules.py  pm.py
noteworthy/gui/: __init__.py  app.py  document_hub.py  preview.py  server.py
noteworthy/gui/static/: index.html
noteworthy/system_config/: build_settings.json
noteworthy/tui/: app.py  base.py  menus.py
noteworthy/tui/components/: build.py  common.py
noteworthy/tui/editors/: __init__.py  blueprint.py  build_wizard.py  config.py  hierarchy.py  indexignore.py  module_config.py  schemes.py  settings.py  snippets.py  text.py
noteworthy/tui/wizards/: init.py  sync.py
templates/: templater.typ
templates/canvas/: cartesian.typ  draw.typ
templates/config/: config.json  hierarchy.json  preface.typ
templates/core/: imports.typ  parser.typ  scanner.typ  setup.typ
templates/covers/: chapter-cover.typ
templates/geometry/: func.typ
templates/layouts/: outline.typ
templates/module/canvas/: draw.typ
templates/module/combi/: draw.typ
templates/module/graph/: calculus.typ
templates/systemconfig/: build_settings.json
(+7 files in other folders)
