[project]
name = "noteworthy"
version = "0.1.0"
description = "Typst document builder with TUI, CLI, and web GUI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
noteworthy = "noteworthy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noteworthy"]

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
